--- a/content/_index.html
+++ b/content/_index.html
@@ -1,36 +1,30 @@
-<section id="about">
-  <h1>NextWork Lab.</h1>
-  <p>
+<section id="about" class="section-card">
+  <h1 class="section-title">NextWork Lab.</h1>
+  <p class="section-desc">
     NextWork Lab. explores practical tools that help people work longer,
     safer, and with less physical strain.
   </p>
 </section>
 
-<hr/>
-
-<section id="cbw">
-  <h2>CBW</h2>
-  <p>
+<section id="cbw" class="section-card">
+  <h2 class="section-title">CBW</h2>
+  <p class="section-desc">
     CBW is a wearable assist solution designed to reduce physical burden
     during repetitive and demanding tasks.
   </p>
 </section>
 
-<hr/>
-
-<section id="exgel">
-  <h2>exgel</h2>
-  <p>
+<section id="exgel" class="section-card">
+  <h2 class="section-title">exgel</h2>
+  <p class="section-desc">
     exgel focuses on pressure distribution and comfort,
     supporting long working hours with reduced fatigue.
   </p>
 </section>
 
-<hr/>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <p>
-    Email: hello@nextworklab.co.kr
-  </p>
-</section>
+<section id="contact" class="section-card">
+  <h2 class="section-title">Contact</h2>
+  <p class="section-desc">
+    Email:
+    <a href="mailto:hello@nextworklab.co.kr">
+      hello@nextwork
