--- a/content/_index.html
+++ b/content/_index.html
@@ -1,30 +1,92 @@
-<section id="about" class="section-card">
-  <h1 class="section-title">NextWork Lab.</h1>
-  <p class="section-desc">
-    NextWork Lab. explores practical tools that help people work longer,
-    safer, and with less physical strain.
+<section id="about" class="hero">
+  <p class="eyebrow">NextWork Lab</p>
+
+  <h1 class="headline">
+    Tools for working longer, safer, and with less physical strain.
+  </h1>
+
+  <p class="subhead">
+    We explore practical assist solutions and comfort technologies that reduce fatigue
+    and support sustainable work.
   </p>
+
+  <div class="cta-row">
+    <a class="btn" href="#cbw">Explore CBW</a>
+    <a class="btn ghost" href="#exgel">Explore exgel</a>
+  </div>
 </section>
 
-<section id="cbw" class="section-card">
-  <h2 class="section-title">CBW</h2>
-  <p class="section-desc">
-    CBW is a wearable assist solution designed to reduce physical burden
-    during repetitive and demanding tasks.
-  </p>
+<section class="section">
+  <div id="cbw" class="brand-card">
+    <div class="brand-head">
+      <h2 class="brand-title">CBW</h2>
+      <p class="brand-one-liner">
+        Wearable assist solutions that reduce physical burden in repetitive tasks.
+      </p>
+    </div>
+
+    <ul class="bullet">
+      <li>Reduces load during demanding movements and repetitive work.</li>
+      <li>Designed for practical use in real workplaces.</li>
+      <li>Helps support safe, sustainable work routines.</li>
+    </ul>
+
+    <div class="card-actions">
+      <a class="btn" href="#contact">Request info</a>
+      <a class="btn ghost" href="#contact">Schedule a demo</a>
+    </div>
+  </div>
 </section>
 
-<section id="exgel" class="section-card">
-  <h2 class="section-title">exgel</h2>
-  <p class="section-desc">
-    exgel focuses on pressure distribution and comfort,
-    supporting long working hours with reduced fatigue.
-  </p>
+<section class="section">
+  <div id="exgel" class="brand-card">
+    <div class="brand-head">
+      <h2 class="brand-title">exgel</h2>
+      <p class="brand-one-liner">
+        Pressure distribution and comfort engineered for long working hours.
+      </p>
+    </div>
+
+    <ul class="bullet">
+      <li>Improves comfort through better pressure distribution.</li>
+      <li>Supports long sessions with reduced fatigue.</li>
+      <li>Useful where sitting/standing time is extended.</li>
+    </ul>
+
+    <div class="card-actions">
+      <a class="btn" href="#contact">Request info</a>
+      <a class="btn ghost" href="#contact">See use cases</a>
+    </div>
+  </div>
 </section>
 
-<section id="contact" class="section-card">
-  <h2 class="section-title">Contact</h2>
-  <p class="section-desc">
-    Email:
-    <a href="mailto:hello@nextworklab.co.kr">
-      hello@nextwork
+<section class="section">
+  <div id="contact" class="brand-card contact-card">
+    <div class="brand-head">
+      <h2 class="brand-title">Contact</h2>
+      <p class="brand-one-liner">
+        Tell us your workplace context. We’ll suggest the fastest next step.
+      </p>
+    </div>
+
+    <div class="contact-grid">
+      <div class="contact-item">
+        <p class="contact-label">Email</p>
+        <p class="contact-value">
+          <a href="mailto:hello@nextworklab.co.kr">hello@nextworklab.co.kr</a>
+        </p>
+      </div>
+
+      <div class="contact-item">
+        <p class="contact-label">Meeting</p>
+        <p class="contact-value">
+          <a href="#" aria-disabled="true">Add your scheduling link</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="small-note">
+      If you include your industry, typical tasks, and headcount, we can reply faster.
+    </div>
+  </div>
+</section>
