--- a/content/_index.html
+++ b/content/_index.html
@@ -13,16 +13,23 @@
   <div class="cta-row">
     <a class="btn" href="#cbw">Explore CBW</a>
     <a class="btn ghost" href="#exgel">Explore exgel</a>
+    <a class="btn ghost" href="#contact">Contact</a>
   </div>
 </section>
 
 <section class="section">
   <div id="cbw" class="brand-card">
-    <div class="brand-head">
-      <h2 class="brand-title">CBW</h2>
-      <p class="brand-one-liner">
-        Wearable assist solutions that reduce physical burden in repetitive tasks.
-      </p>
+    <div class="card-top">
+      <div class="thumb-wrap">
+        <img class="thumb" src="/images/cbw.jpg" alt="CBW wearable assist" loading="lazy" />
+      </div>
+
+      <div class="brand-head">
+        <h2 class="brand-title">CBW</h2>
+        <p class="brand-one-liner">
+          Wearable assist solutions that reduce physical burden in repetitive tasks.
+        </p>
+      </div>
     </div>
 
     <ul class="bullet">
@@ -32,7 +39,7 @@
     </ul>
 
     <div class="card-actions">
-      <a class="btn" href="#contact">Request info</a>
+      <a class="btn" href="#contact">Request information</a>
       <a class="btn ghost" href="#contact">Schedule a demo</a>
     </div>
   </div>
@@ -40,11 +47,17 @@
 
 <section class="section">
   <div id="exgel" class="brand-card">
-    <div class="brand-head">
-      <h2 class="brand-title">exgel</h2>
-      <p class="brand-one-liner">
-        Pressure distribution and comfort engineered for long working hours.
-      </p>
+    <div class="card-top">
+      <div class="thumb-wrap">
+        <img class="thumb" src="/images/exgel.jpg" alt="exgel comfort material" loading="lazy" />
+      </div>
+
+      <div class="brand-head">
+        <h2 class="brand-title">exgel</h2>
+        <p class="brand-one-liner">
+          Pressure distribution and comfort engineered for long working hours.
+        </p>
+      </div>
     </div>
 
     <ul class="bullet">
@@ -54,7 +67,7 @@
     </ul>
 
     <div class="card-actions">
-      <a class="btn" href="#contact">Request info</a>
+      <a class="btn" href="#contact">Request information</a>
       <a class="btn ghost" href="#contact">See use cases</a>
     </div>
   </div>
@@ -65,7 +78,7 @@
     <div class="brand-head">
       <h2 class="brand-title">Contact</h2>
       <p class="brand-one-liner">
-        Tell us your workplace context. We’ll suggest the fastest next step.
+        Share your work context. We will suggest the fastest next step.
       </p>
     </div>
 
@@ -75,18 +88,32 @@
         <p class="contact-value">
           <a href="mailto:hello@nextworklab.co.kr">hello@nextworklab.co.kr</a>
         </p>
+        <p class="contact-help">
+          Please include industry, tasks, headcount, and your target date.
+        </p>
       </div>
 
       <div class="contact-item">
-        <p class="contact-label">Meeting</p>
+        <p class="contact-label">Book a meeting</p>
         <p class="contact-value">
-          <a href="#" aria-disabled="true">Add your scheduling link</a>
+          <a href="https://calendly.com/REPLACE_THIS" rel="noopener" target="_blank">
+            15-min intro call
+          </a>
+        </p>
+        <p class="contact-help">
+          Replace the link with Calendly, Google Appointment, or your preferred scheduler.
         </p>
       </div>
     </div>
 
-    <div class="small-note">
-      If you include your industry, typical tasks, and headcount, we can reply faster.
+    <div class="leadbox">
+      <p class="lead-title">For a faster reply</p>
+      <ul class="lead-list">
+        <li>Your workplace type (hospital / factory / logistics / care facility, etc.)</li>
+        <li>Top 1–2 pain points (back strain, shoulder fatigue, long sitting, etc.)</li>
+        <li>Number of staff and typical shift length</li>
+        <li>If you want a demo, your city and preferred timeframe</li>
+      </ul>
     </div>
   </div>
 </section>
