--- a/content/_index.html
+++ b/content/_index.html
@@ -21,7 +21,7 @@
   <div id="cbw" class="brand-card">
     <div class="card-top">
       <div class="thumb-wrap">
-        <img class="thumb" src="/images/cbw.jpg" alt="CBW wearable assist" loading="lazy" />
+        <img class="thumb" src="/images/cbw.png" alt="CBW wearable assist" loading="lazy" />
       </div>
 
       <div class="brand-head">
@@ -46,10 +46,10 @@
 </section>
 
 <section class="section">
-  <div id="exgel" class="brand-card">
+  <div id="" class="brand-card">
     <div class="card-top">
       <div class="thumb-wrap">
-        <img class="thumb" src="/images/exgel.jpg" alt="exgel comfort material" loading="lazy" />
+        <img class="thumb" src="/images/leavo_mainvisual.jpg" alt="exgel comfort material" loading="lazy" />
       </div>
 
       <div class="brand-head">
