--- a/content/_index.html
+++ b/content/_index.html
@@ -1,4 +1,4 @@
-<section id="about" class="hero">
+<section id="about" class="panel is-default">
   <p class="eyebrow">NextWork Lab</p>
 
   <h1 class="headline">
@@ -11,25 +11,23 @@
   </p>
 
   <div class="cta-row">
-    <a class="btn" href="#cbw">Explore CBW</a>
-    <a class="btn ghost" href="#exgel">Explore exgel</a>
-    <a class="btn ghost" href="#contact">Contact</a>
+    <a class="btn" href="#contact">Contact</a>
+    <a class="btn ghost" href="#cbw">CBW</a>
+    <a class="btn ghost" href="#exgel">exgel</a>
+  </div>
+
+  <div class="about-note">
+    Minimal, research-driven product + field work.
   </div>
 </section>
 
-<section class="section">
-  <div id="cbw" class="brand-card">
-    <div class="card-top">
-      <div class="thumb-wrap">
-        <img class="thumb" src="/images/cbw.png" alt="CBW wearable assist" loading="lazy" />
-      </div>
-
-      <div class="brand-head">
-        <h2 class="brand-title">CBW</h2>
-        <p class="brand-one-liner">
-          Wearable assist solutions that reduce physical burden in repetitive tasks.
-        </p>
-      </div>
+<section id="cbw" class="panel">
+  <div class="brand-card">
+    <div class="brand-head">
+      <h2 class="brand-title">CBW</h2>
+      <p class="brand-one-liner">
+        Wearable assist solutions that reduce physical burden in repetitive tasks.
+      </p>
     </div>
 
     <ul class="bullet">
@@ -45,19 +43,13 @@
   </div>
 </section>
 
-<section class="section">
-  <div id="" class="brand-card">
-    <div class="card-top">
-      <div class="thumb-wrap">
-        <img class="thumb" src="/images/leavo_mainvisual.jpg" alt="exgel comfort material" loading="lazy" />
-      </div>
-
-      <div class="brand-head">
-        <h2 class="brand-title">exgel</h2>
-        <p class="brand-one-liner">
-          Pressure distribution and comfort engineered for long working hours.
-        </p>
-      </div>
+<section id="exgel" class="panel">
+  <div class="brand-card">
+    <div class="brand-head">
+      <h2 class="brand-title">exgel</h2>
+      <p class="brand-one-liner">
+        Pressure distribution and comfort engineered for long working hours.
+      </p>
     </div>
 
     <ul class="bullet">
@@ -73,8 +65,8 @@
   </div>
 </section>
 
-<section class="section">
-  <div id="contact" class="brand-card contact-card">
+<section id="contact" class="panel">
+  <div class="brand-card contact-card">
     <div class="brand-head">
       <h2 class="brand-title">Contact</h2>
       <p class="brand-one-liner">
@@ -89,7 +81,7 @@
           <a href="mailto:hello@nextworklab.co.kr">hello@nextworklab.co.kr</a>
         </p>
         <p class="contact-help">
-          Please include industry, tasks, headcount, and your target date.
+          Please include industry, tasks, headcount, and target date.
         </p>
       </div>
 
@@ -101,7 +93,7 @@
           </a>
         </p>
         <p class="contact-help">
-          Replace the link with Calendly, Google Appointment, or your preferred scheduler.
+          Replace the link with your scheduler.
         </p>
       </div>
     </div>
@@ -109,10 +101,10 @@
     <div class="leadbox">
       <p class="lead-title">For a faster reply</p>
       <ul class="lead-list">
-        <li>Your workplace type (hospital / factory / logistics / care facility, etc.)</li>
+        <li>Your workplace type (factory / logistics / hospital / care facility, etc.)</li>
         <li>Top 1–2 pain points (back strain, shoulder fatigue, long sitting, etc.)</li>
-        <li>Number of staff and typical shift length</li>
-        <li>If you want a demo, your city and preferred timeframe</li>
+        <li>Headcount and typical shift length</li>
+        <li>City and preferred timeframe for a demo</li>
       </ul>
     </div>
   </div>
