--- a/content/_index.html
+++ b/content/_index.html
@@ -1,23 +1,16 @@
-<section id="about" class="panel is-default">
+<section id="about" class="panel is-default hero">
   <p class="eyebrow">NextWork Lab</p>
 
   <h1 class="headline">
-    Tools for working longer, safer, and with less physical strain.
+    Minimal, research-driven product + field work.
   </h1>
 
   <p class="subhead">
-    We explore practical assist solutions and comfort technologies that reduce fatigue
-    and support sustainable work.
+    CBW와 exgel 중심으로 현장 문제를 빠르게 진단하고, 도구/프로토콜/콘텐츠로 해결합니다.
   </p>
 
-  <div class="cta-row">
-    <a class="btn" href="#contact">Contact</a>
-    <a class="btn ghost" href="#cbw">CBW</a>
-    <a class="btn ghost" href="#exgel">exgel</a>
-  </div>
-
   <div class="about-note">
-    Minimal, research-driven product + field work.
+    We build and deploy practical solutions, then refine them with field feedback.
   </div>
 </section>
 
@@ -31,14 +24,14 @@
     </div>
 
     <ul class="bullet">
-      <li>Reduces load during demanding movements and repetitive work.</li>
-      <li>Designed for practical use in real workplaces.</li>
-      <li>Helps support safe, sustainable work routines.</li>
+      <li>Designed for real workplaces and repetitive motion tasks.</li>
+      <li>Helps reduce load during lifting, leaning, and prolonged work.</li>
+      <li>Supports safer routines without slowing the workflow.</li>
     </ul>
 
     <div class="card-actions">
       <a class="btn" href="#contact">Request information</a>
-      <a class="btn ghost" href="#contact">Schedule a demo</a>
+      <a class="btn ghost" href="#contact">Book a demo</a>
     </div>
   </div>
 </section>
@@ -48,14 +41,14 @@
     <div class="brand-head">
       <h2 class="brand-title">exgel</h2>
       <p class="brand-one-liner">
-        Pressure distribution and comfort engineered for long working hours.
+        Comfort materials that improve pressure distribution and reduce fatigue.
       </p>
     </div>
 
     <ul class="bullet">
-      <li>Improves comfort through better pressure distribution.</li>
-      <li>Supports long sessions with reduced fatigue.</li>
-      <li>Useful where sitting/standing time is extended.</li>
+      <li>Improves comfort for long sitting or standing hours.</li>
+      <li>Useful for chairs, supports, and contact points at work.</li>
+      <li>Helps reduce localized pressure and perceived fatigue.</li>
     </ul>
 
     <div class="card-actions">
@@ -70,7 +63,7 @@
     <div class="brand-head">
       <h2 class="brand-title">Contact</h2>
       <p class="brand-one-liner">
-        Share your work context. We will suggest the fastest next step.
+        Send your context and we will reply with the fastest next step.
       </p>
     </div>
 
@@ -78,7 +71,7 @@
       <div class="contact-item">
         <p class="contact-label">Email</p>
         <p class="contact-value">
-          <a href="mailto:hello@nextworklab.co.kr">hello@nextworklab.co.kr</a>
+          <a href="mailto:info@tuatua.kr">info@ntuatua.kr</a>
         </p>
         <p class="contact-help">
           Please include industry, tasks, headcount, and target date.
@@ -86,14 +79,14 @@
       </div>
 
       <div class="contact-item">
-        <p class="contact-label">Book a meeting</p>
+        <p class="contact-label">Meeting</p>
         <p class="contact-value">
           <a href="https://calendly.com/REPLACE_THIS" rel="noopener" target="_blank">
             15-min intro call
           </a>
         </p>
         <p class="contact-help">
-          Replace the link with your scheduler.
+          Replace this with your scheduler link.
         </p>
       </div>
     </div>
@@ -101,10 +94,10 @@
     <div class="leadbox">
       <p class="lead-title">For a faster reply</p>
       <ul class="lead-list">
-        <li>Your workplace type (factory / logistics / hospital / care facility, etc.)</li>
-        <li>Top 1–2 pain points (back strain, shoulder fatigue, long sitting, etc.)</li>
+        <li>Workplace type (factory / logistics / hospital / care facility, etc.)</li>
+        <li>Top 1–2 issues (back strain, shoulder fatigue, long sitting, etc.)</li>
         <li>Headcount and typical shift length</li>
-        <li>City and preferred timeframe for a demo</li>
+        <li>City and timeframe if you want a demo</li>
       </ul>
     </div>
   </div>
