--- a/content/_index.html
+++ b/content/_index.html
@@ -28,11 +28,6 @@
       <li>Helps reduce load during lifting, leaning, and prolonged work.</li>
       <li>Supports safer routines without slowing the workflow.</li>
     </ul>
-
-    <div class="card-actions">
-      <a class="btn" href="#contact">Request information</a>
-      <a class="btn ghost" href="#contact">Book a demo</a>
-    </div>
   </div>
 </section>
 
@@ -50,11 +45,6 @@
       <li>Useful for chairs, supports, and contact points at work.</li>
       <li>Helps reduce localized pressure and perceived fatigue.</li>
     </ul>
-
-    <div class="card-actions">
-      <a class="btn" href="#contact">Request information</a>
-      <a class="btn ghost" href="#contact">See use cases</a>
-    </div>
   </div>
 </section>
 
@@ -71,10 +61,7 @@
       <div class="contact-item">
         <p class="contact-label">Email</p>
         <p class="contact-value">
-          <a href="mailto:info@tuatua.kr">info@ntuatua.kr</a>
-        </p>
-        <p class="contact-help">
-          Please include industry, tasks, headcount, and target date.
+          <a href="mailto:hello@nextworklab.co.kr">hello@nextworklab.co.kr</a>
         </p>
       </div>
 
@@ -85,20 +72,7 @@
             15-min intro call
           </a>
         </p>
-        <p class="contact-help">
-          Replace this with your scheduler link.
-        </p>
       </div>
-    </div>
-
-    <div class="leadbox">
-      <p class="lead-title">For a faster reply</p>
-      <ul class="lead-list">
-        <li>Workplace type (factory / logistics / hospital / care facility, etc.)</li>
-        <li>Top 1–2 issues (back strain, shoulder fatigue, long sitting, etc.)</li>
-        <li>Headcount and typical shift length</li>
-        <li>City and timeframe if you want a demo</li>
-      </ul>
     </div>
   </div>
 </section>
