--- a/content/_index.html
+++ b/content/_index.html
@@ -7,28 +7,23 @@
     </h1>
 
     <p class="subhead">
-      CBW와 exgel 중심으로 현장 문제를 빠르게 진단하고,
-      도구·프로토콜·콘텐츠로 해결합니다.
+      고령화와 인력 부족의 시대에 우리는
+      “다음 세대의 일(Next Work)”을 고민합니다.
+      자동화가 아니라, 사람이 해야 하는 일을
+      기술로 보완하는 방식에 주목합니다.
+    </p>
+
+    <p class="subhead">
+      NextWork Lab.은 의료·돌봄·산업 현장에서
+      실제로 사용할 수 있는 솔루션을 소개합니다.
     </p>
 
     <p class="about-note">
       We build and deploy practical solutions, then refine them with field feedback.
     </p>
   </div>
-
-  <div class="brand-card">
-    <p class="brand-one-liner">
-      고령화와 인력 부족의 시대에 우리는
-      <strong>“다음 세대의 일(Next Work)”</strong>을 고민합니다.
-      자동화가 아니라, 사람이 해야 하는 일을 기술로 보완하는 방식에 주목합니다.
-    </p>
-
-    <p class="brand-one-liner">
-      NextWork Lab.은 의료·돌봄·산업 현장에서
-      실제로 사용할 수 있는 솔루션을 소개합니다.
-    </p>
-  </div>
 </section>
+
 
 
 <section id="cbw" class="panel">
