--- a/content/_index.html
+++ b/content/_index.html
@@ -2,9 +2,7 @@
   <div class="hero">
     <p class="eyebrow">NextWork Lab</p>
 
-    <h1 class="headline">
-      Minimal, research-driven product + field work.
-    </h1>
+ <h1 class="headline"> We think about the next generation of work. </h1>
 
     <p class="subhead">
       고령화와 인력 부족의 시대에 우리는
