--- a/content/_index.html
+++ b/content/_index.html
@@ -24,8 +24,6 @@
 
 <section id="cbw" class="panel">
   <div class="hero">
- 
-
     <h1 class="headline">CBW</h1>
 
     <p class="subhead">
@@ -33,42 +31,44 @@
       작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.
     </p>
 
+    <p class="section-title">Wearable, not equipment</p>
     <p class="subhead">
       CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다.
-      일반 작업복처럼 착용할 수 있어, 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.
+      일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.
     </p>
 
+    <p class="section-title">Posture support</p>
     <p class="subhead">
       CBW의 핵심은 자세를 “잡아주는” 구조입니다.
       복부 서포터를 통해 복강 내 압력을 높이고, 요추를 안정적으로 지지합니다.
       이를 통해 허리에 집중되는 부담을 분산시킵니다.
     </p>
 
+    <p class="section-title">Support during lifting</p>
     <p class="subhead">
       물건을 들어 올리거나 내릴 때에는 바지 내부의 고무 밴드 구조가 작동합니다.
-      허리와 허벅지를 연결하는 서포트 구조가, 척추에 무리가 적은 자세를 유지하도록 돕습니다.
+      허리와 허벅지를 연결하는 서포트 구조가 척추에 무리가 적은 자세를 유지하도록 돕습니다.
       이는 무거운 물체를 다루는 작업 환경을 고려한 설계입니다.
     </p>
 
+    <p class="section-title">All-day comfort</p>
     <p class="subhead">
       CBW는 서 있는 자세, 숙이는 자세, 들어 올리는 자세를 모두 고려합니다.
-      등이 앞으로 굽는 것을 방지하고, 작업 중 자세가 무너지는 것을 줄여줍니다.
+      등이 앞으로 굽는 것을 방지하고 작업 중 자세가 무너지는 것을 줄여줍니다.
       통기성이 좋은 메쉬 소재를 사용해 장시간 착용에도 부담이 적습니다.
     </p>
 
+    <p class="section-title">Customization</p>
     <p class="subhead">
       CBW는 작업 환경에 맞춰 커스터마이즈가 가능합니다.
       기업 유니폼 색상이나 기능성 소재에 맞춘 별도 제작도 지원됩니다.
     </p>
 
+    <p class="section-title">How we introduce CBW</p>
     <p class="subhead">
       NextWork Lab.은 CBW를 의료, 돌봄, 산업 현장에서 실제로 사용할 수 있는 솔루션으로 소개합니다.
-      단기 착용이 아닌, 하루 일과 전체를 고려한 착용 경험을 기준으로 봅니다.
+      단기 착용이 아닌 하루 일과 전체를 고려한 착용 경험을 기준으로 봅니다.
     </p>
-
-    <div class="footer">
-      <span class="muted">© {{ now.Year }} NextWork Lab.</span>
-    </div>
   </div>
 </section>
 
