--- a/content/_index.html
+++ b/content/_index.html
@@ -80,19 +80,52 @@
 
 
 <section id="exgel" class="panel">
-  <div class="brand-card">
-    <div class="brand-head">
-      <h2 class="brand-title">exgel</h2>
-      <p class="brand-one-liner">
-        Comfort materials that improve pressure distribution and reduce fatigue.
-      </p>
-    </div>
+  <div class="hero">
 
-    <ul class="bullet">
-      <li>Improves comfort for long sitting or standing hours.</li>
-      <li>Useful for chairs, supports, and contact points at work.</li>
-      <li>Helps reduce localized pressure and perceived fatigue.</li>
-    </ul>
+    <h1 class="headline">Laevo</h1>
+
+    <p class="subhead">
+      Laevo는 exgel이 공급하는 패시브(passive) 타입의 웨어러블 서포트 수트입니다.
+      배터리나 모터를 사용하지 않고, 사용자의 움직임을 기계적 구조로 보조하는 방식으로 설계되었습니다.
+    </p>
+
+    <p class="subhead">
+      Laevo는 사용자의 동작에서 발생하는 힘을 구조적으로 저장하고 다시 방출합니다.
+      이를 통해 허리와 상체에 가해지는 부담을 줄이며, 별도의 충전이나 유지 관리 없이
+      현장에서 바로 사용할 수 있도록 설계되었습니다.
+    </p>
+
+    <p class="subhead">
+      Laevo는 특히 앞으로 숙이는 동작과 물건을 들어 올리는 작업에서 효과를 발휘합니다.
+      상체가 앞으로 기울어질 때 가스 스프링 구조가 작동해,
+      어깨와 허리 사이에 집중되는 하중을 줄여줍니다.
+      연구 자료에 따르면 이러한 구조를 통해 허리와 등 근육의 부담을
+      약 40–50% 감소시키는 효과가 보고되었습니다.
+    </p>
+
+    <p class="subhead">
+      Laevo의 서포트는 특정 각도에서만 작동하지 않습니다.
+      가벼운 전방 굽힘부터 깊은 숙임 자세까지,
+      작업 중 자세 변화에 따라 지속적으로 보조력이 제공되도록 설계되어 있습니다.
+      이는 반복적인 중량 작업이나 장시간 숙이는 작업 환경을 고려한 구조입니다.
+    </p>
+
+    <p class="subhead">
+      Laevo는 비교적 빠르게 착용할 수 있으며,
+      평균 착용 시간은 약 10초 내외입니다.
+      어깨와 다리를 연결하는 외골격 형태로 구성되어 있고,
+      체형과 작업 환경에 맞춰 각도와 길이를 조절할 수 있습니다.
+      일부 모델은 작업복 위에 추가로 착용하는 것도 가능합니다.
+    </p>
+
+    <p class="subhead">
+      NextWork Lab.은 Laevo를 중량 작업과 반복적인 숙임 동작이 많은
+      산업 현장에서 실제로 사용할 수 있는 서포트 수트로 소개합니다.
+      하루 종일 착용하는 작업복형 솔루션인 CBW와 달리,
+      Laevo는 특정 작업 동작에서 명확한 보조력을 제공하는
+      장비 중심의 착용 경험을 기준으로 봅니다.
+    </p>
+
   </div>
 </section>
 
