--- a/content/_index.html
+++ b/content/_index.html
@@ -130,30 +130,32 @@
 </section>
 
 <section id="contact" class="panel">
-  <div class="brand-card contact-card">
-    <div class="brand-head">
-      <h2 class="brand-title">Contact</h2>
-      <p class="brand-one-liner">
-        Send your context and we will reply with the fastest next step.
-      </p>
-    </div>
+  <div class="hero">
 
-    <div class="contact-grid">
-      <div class="contact-item">
-        <p class="contact-label">Email</p>
-        <p class="contact-value">
-          <a href="mailto:hello@nextworklab.co.kr">hello@nextworklab.co.kr</a>
-        </p>
-      </div>
+    <h1 class="headline">Contact</h1>
 
-      <div class="contact-item">
-        <p class="contact-label">Meeting</p>
-        <p class="contact-value">
-          <a href="https://calendly.com/REPLACE_THIS" rel="noopener" target="_blank">
-            15-min intro call
-          </a>
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+    <p class="subhead">
+      문의는 이메일로 받고 있습니다.
+    </p>
+
+    <p class="subhead">
+      <a href="mailto:info@tuatua.kr">info@tuatua.kr</a>
+    </p>
+
+    <p class="subhead">
+      가능한 한 빠르게 회신드립니다.
+      대부분의 문의는 10분 이내에 답변드리며,
+      늦어도 당일 중으로 회신을 드립니다.
+    </p>
+
+    <p class="subhead">
+      NextWork Lab.은 주식회사 TUA에서 운영하고 있습니다.
+    </p>
+
+    <p class="subhead">
+      회사 홈페이지:
+      <a href="https://tuatua.kr" target="_blank" rel="noopener noreferrer">
+        https://tuatua.kr
+      </a>
+    </p>
+
