--- a/content/_index.html
+++ b/content/_index.html
@@ -1,164 +1,82 @@
 <section id="about" class="panel is-default">
-  <div class="hero">
- 
-
- <h1 class="headline"> We think about the next generation of work. </h1>
+  <div class="hero hero--about">
+    <h1 class="headline">We think about the next generation of work.</h1>
 
     <p class="subhead">
-      고령화와 인력 부족의 시대에 우리는
-      “다음 세대의 일(Next Work)”을 고민합니다.
-      자동화가 아니라, 사람이 해야 하는 일을
-      기술로 보완하는 방식에 주목합니다.
+      고령화와 인력 부족의 시대에 우리는 “다음 세대의 일(Next Work)”을 고민합니다.
+      자동화가 아니라, 사람이 해야 하는 일을 기술로 보완하는 방식에 주목합니다.
     </p>
 
     <p class="subhead">
-      NextWork Lab.은 의료·돌봄·산업 현장에서
-      실제로 사용할 수 있는 솔루션을 소개합니다.
+      NextWork Lab.은 의료·돌봄·산업 현장에서 실제로 사용할 수 있는 솔루션을 소개합니다.
     </p>
-
-
   </div>
 </section>
-
 
 
 <section id="cbw" class="panel">
-  <div class="hero">
+  <div class="hero hero--product product">
     <h1 class="headline">CBW</h1>
 
-    <p class="subhead">
-      CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다.
-      작업 중 허리와 하체에 가해지는 부담을 줄이고,
-      올바른 자세를 유지하도록 돕습니다.
-    </p>
+    <p>CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다.
+    작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
 
-    <p class="subhead">
-      CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다.
-      일반 작업복처럼 착용할 수 있어,
-      출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.
-    </p>
+    <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다.
+    일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
-    <p class="subhead">
-      CBW의 핵심은 자세를 “잡아주는” 구조입니다.
-      복부 서포터를 통해 복강 내 압력을 높이고,
-      요추를 안정적으로 지지합니다.
-      이를 통해 허리에 집중되는 부담을 분산시킵니다.
-    </p>
+    <p>CBW의 핵심은 자세를 “잡아주는” 구조입니다.
+    복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다.</p>
 
-    <p class="subhead">
-      물건을 들어 올리거나 내릴 때에는
-      바지 내부의 고무 밴드 구조가 작동합니다.
-      허리와 허벅지를 연결하는 서포트 구조가
-      척추에 무리가 적은 자세를 유지하도록 돕습니다.
-    </p>
+    <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 고무 밴드 구조가 작동합니다.
+    이는 무거운 물체를 다루는 작업 환경을 고려한 설계입니다.</p>
 
-    <p class="subhead">
-      CBW는 서 있는 자세, 숙이는 자세,
-      들어 올리는 자세를 모두 고려합니다.
-      등이 앞으로 굽는 것을 방지하고,
-      작업 중 자세가 무너지는 것을 줄여줍니다.
-      통기성이 좋은 메쉬 소재를 사용해
-      장시간 착용에도 부담이 적습니다.
-    </p>
-
-    <p class="subhead">
-      CBW는 작업 환경에 맞춰 커스터마이즈가 가능합니다.
-      기업 유니폼 색상이나 기능성 소재에 맞춘
-      별도 제작도 지원됩니다.
-    </p>
-
-    <p class="subhead">
-      NextWork Lab.은 CBW를
-      의료, 돌봄, 산업 현장에서
-      실제로 사용할 수 있는 솔루션으로 소개합니다.
-      단기 착용이 아닌,
-      하루 일과 전체를 고려한 착용 경험을 기준으로 봅니다.
-    </p>
+    <p>CBW는 하루 일과 전체를 고려한 착용 경험을 기준으로 설계되었습니다.</p>
   </div>
 </section>
+
 
 
 
 <section id="exgel" class="panel">
-  <div class="hero">
+  <div class="hero hero--product product">
+    <h1 class="headline">exgel · Laevo</h1>
 
-    <h1 class="headline">Laevo</h1>
+    <p>Laevo는 exgel이 공급하는 패시브 타입의 웨어러블 서포트 수트입니다.
+    배터리나 모터를 사용하지 않습니다.</p>
 
-    <p class="subhead">
-      Laevo는 exgel이 공급하는 패시브(passive) 타입의 웨어러블 서포트 수트입니다.
-      배터리나 모터를 사용하지 않고, 사용자의 움직임을 기계적 구조로 보조하는 방식으로 설계되었습니다.
-    </p>
+    <p>사용자의 움직임에서 발생하는 힘을 기계적 구조로 저장하고 방출해
+    허리와 상체에 가해지는 부담을 줄입니다.</p>
 
-    <p class="subhead">
-      Laevo는 사용자의 동작에서 발생하는 힘을 구조적으로 저장하고 다시 방출합니다.
-      이를 통해 허리와 상체에 가해지는 부담을 줄이며, 별도의 충전이나 유지 관리 없이
-      현장에서 바로 사용할 수 있도록 설계되었습니다.
-    </p>
+    <p>Laevo는 특히 앞으로 숙이거나 물건을 들어 올리는 작업에서 효과를 발휘합니다.
+    연구 자료에 따르면 허리와 등 근육의 부담을 약 40–50% 감소시키는 효과가 보고되었습니다.</p>
 
-    <p class="subhead">
-      Laevo는 특히 앞으로 숙이는 동작과 물건을 들어 올리는 작업에서 효과를 발휘합니다.
-      상체가 앞으로 기울어질 때 가스 스프링 구조가 작동해,
-      어깨와 허리 사이에 집중되는 하중을 줄여줍니다.
-      연구 자료에 따르면 이러한 구조를 통해 허리와 등 근육의 부담을
-      약 40–50% 감소시키는 효과가 보고되었습니다.
-    </p>
-
-    <p class="subhead">
-      Laevo의 서포트는 특정 각도에서만 작동하지 않습니다.
-      가벼운 전방 굽힘부터 깊은 숙임 자세까지,
-      작업 중 자세 변화에 따라 지속적으로 보조력이 제공되도록 설계되어 있습니다.
-      이는 반복적인 중량 작업이나 장시간 숙이는 작업 환경을 고려한 구조입니다.
-    </p>
-
-    <p class="subhead">
-      Laevo는 비교적 빠르게 착용할 수 있으며,
-      평균 착용 시간은 약 10초 내외입니다.
-      어깨와 다리를 연결하는 외골격 형태로 구성되어 있고,
-      체형과 작업 환경에 맞춰 각도와 길이를 조절할 수 있습니다.
-      일부 모델은 작업복 위에 추가로 착용하는 것도 가능합니다.
-    </p>
-
-    <p class="subhead">
-      NextWork Lab.은 Laevo를 중량 작업과 반복적인 숙임 동작이 많은
-      산업 현장에서 실제로 사용할 수 있는 서포트 수트로 소개합니다.
-      하루 종일 착용하는 작업복형 솔루션인 CBW와 달리,
-      Laevo는 특정 작업 동작에서 명확한 보조력을 제공하는
-      장비 중심의 착용 경험을 기준으로 봅니다.
-    </p>
-
+    <p>CBW가 일상 착용형이라면, Laevo는 중량 작업 중심의 외골격 구조입니다.
+    반복적이고 강도가 높은 작업 환경을 타겟으로 합니다.</p>
   </div>
 </section>
+
 
 <section id="contact" class="panel">
-  <div class="hero">
-
+  <div class="hero hero--contact product">
     <h1 class="headline">Contact</h1>
 
-    <p class="subhead">
-      문의는 이메일로 받고 있습니다.
-    </p>
+    <p>문의는 이메일로 받고 있습니다.</p>
 
-    <p class="subhead">
-      <a href="mailto:info@tuatua.kr">info@tuatua.kr</a>
-    </p>
+    <p><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></p>
 
-    <p class="subhead">
-      가능한 한 빠르게 회신드립니다.
-      대부분의 문의는 10분 이내에 답변드리며,
-      늦어도 당일 중으로 회신을 드립니다.
-    </p>
+    <p>대부분의 문의는 10분 이내에 회신드리며,
+    늦어도 당일 중으로 답변드립니다.</p>
 
-    <p class="subhead">
-      NextWork Lab.은 주식회사 TUA에서 운영하고 있습니다.
-    </p>
+    <p>NextWork Lab.은 주식회사 TUA에서 운영하고 있습니다.</p>
 
-    <p class="subhead">
+    <p>
       회사 홈페이지:
-      <a href="https://tuatua.kr" target="_blank" rel="noopener noreferrer">
-        https://tuatua.kr
-      </a>
+      <a href="https://tuatua.kr" target="_blank">https://tuatua.kr</a>
     </p>
 
-
+    <p>
+      서울특별시 서초구 강남대로53길 8, 7-179
+    </p>
   </div>
 </section>
+
