--- a/content/_index.html
+++ b/content/_index.html
@@ -1,98 +1,1 @@
-<section id="about" class="panel is-default">
-  <div class="hero hero--about">
-    <p class="eyebrow">Next generation of work</p>
-    <h1 class="headline">We think about the next generation of work.</h1>
-
-    <p class="subhead">
-      고령화와 인력 부족의 시대에 우리는 “다음 세대의 일(Next Work)”을 고민합니다.
-      자동화가 아니라, 사람이 해야 하는 일을 기술로 보완하는 방식에 주목합니다.
-    </p>
-
-    <p class="subhead">
-      NextWork Lab.은 의료·돌봄·산업 현장에서 실제로 사용할 수 있는 솔루션을 소개합니다.
-    </p>
-
-    <hr class="section-rule">
-
-    <h2 class="section-title">What NextWork Lab. does</h2>
-    <p class="section-desc">
-      NextWork Lab.은 제품 카탈로그가 아니라, 현장에서 검증 가능한 솔루션을 선별해 소개하는 브랜드 플랫폼입니다.
-    </p>
-  </div>
-</section>
-
-<section id="cbw" class="panel">
-  <div class="hero hero--product product">
-    <h1 class="headline">CBW</h1>
-
-    <p class="section-desc">
-      CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고,
-      올바른 자세를 유지하도록 돕습니다.
-    </p>
-
-    <h3>일상 착용을 전제로 설계된 구조</h3>
-    <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
-
-    <h3>자세를 “잡아주는” 핵심 메커니즘</h3>
-    <p>CBW의 핵심은 자세를 “잡아주는” 구조입니다. 복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다.</p>
-
-    <h3>반복 작업 환경을 고려한 보조 방식</h3>
-    <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 고무 밴드 구조가 작동합니다. 이는 무거운 물체를 다루는 작업 환경을 고려한 설계입니다.</p>
-
-    <h3>하루 일과 전체를 기준으로 한 착용 경험</h3>
-    <p>CBW는 하루 일과 전체를 고려한 착용 경험을 기준으로 설계되었습니다.</p>
-  </div>
-</section>
-
-<section id="exgel" class="panel">
-  <div class="hero hero--product product">
-    <h1 class="headline">exgel · Laevo</h1>
-
-    <p class="section-desc">
-      Laevo는 exgel이 공급하는 패시브 타입의 웨어러블 서포트 수트입니다. 배터리나 모터를 사용하지 않습니다.
-    </p>
-
-    <h3>동력 없이 부담을 줄이는 패시브 구조</h3>
-    <p>사용자의 움직임에서 발생하는 힘을 기계적 구조로 저장하고 방출해 허리와 상체에 가해지는 부담을 줄입니다.</p>
-
-    <h3>어떤 동작에서 효과가 큰가</h3>
-    <p>Laevo는 특히 앞으로 숙이거나 물건을 들어 올리는 작업에서 효과를 발휘합니다. 연구 자료에 따르면 허리와 등 근육의 부담을 약 40–50% 감소시키는 효과가 보고되었습니다.</p>
-
-    <h3>CBW와의 포지셔닝 차이</h3>
-    <p>CBW가 일상 착용형이라면, Laevo는 중량 작업 중심의 외골격 구조입니다. 반복적이고 강도가 높은 작업 환경을 타겟으로 합니다.</p>
-  </div>
-</section>
-
-<section id="contact" class="panel">
-  <div class="hero hero--contact product">
-    <h1 class="headline">Contact</h1>
-
-    <p class="section-desc">
-      문의는 이메일로 받고 있습니다. 대부분의 문의는 10분 이내에 회신드리며, 늦어도 당일 중으로 답변드립니다.
-    </p>
-
-    <div class="contact-block" role="list">
-      <div class="contact-row" role="listitem">
-        <div class="contact-label">Email</div>
-        <div class="contact-value"><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></div>
-      </div>
-
-      <div class="contact-row" role="listitem">
-        <div class="contact-label">Operated by</div>
-        <div class="contact-value">NextWork Lab.은 주식회사 TUA에서 운영하고 있습니다.</div>
-      </div>
-
-      <div class="contact-row" role="listitem">
-        <div class="contact-label">Company</div>
-        <div class="contact-value">
-          <a href="https://tuatua.kr" target="_blank" rel="noopener">https://tuatua.kr</a>
-        </div>
-      </div>
-
-      <div class="contact-row" role="listitem">
-        <div class="contact-label">Address</div>
-        <div class="contact-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
-      </div>
-    </div>
-  </div>
-</section>
+<section id="about" class="panel is-default"> <div class="hero hero--about"> <h1 class="headline">We think about the next generation of work.</h1> <p class="subhead"> 고령화와 인력 부족의 시대에 우리는 “다음 세대의 일(Next Work)”을 고민합니다. 자동화가 아니라, 사람이 해야 하는 일을 기술로 보완하는 방식에 주목합니다. </p> <p class="subhead"> NextWork Lab.은 의료·돌봄·산업 현장에서 실제로 사용할 수 있는 솔루션을 소개합니다. </p> </div> </section> <section id="cbw" class="panel"> <div class="hero hero--product product"> <h1 class="headline">CBW</h1> <p>CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p> <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p> <p>CBW의 핵심은 자세를 “잡아주는” 구조입니다. 복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다.</p> <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 고무 밴드 구조가 작동합니다. 이는 무거운 물체를 다루는 작업 환경을 고려한 설계입니다.</p> <p>CBW는 하루 일과 전체를 고려한 착용 경험을 기준으로 설계되었습니다.</p> </div> </section> <section id="exgel" class="panel"> <div class="hero hero--product product"> <h1 class="headline">exgel · Laevo</h1> <p>Laevo는 exgel이 공급하는 패시브 타입의 웨어러블 서포트 수트입니다. 배터리나 모터를 사용하지 않습니다.</p> <p>사용자의 움직임에서 발생하는 힘을 기계적 구조로 저장하고 방출해 허리와 상체에 가해지는 부담을 줄입니다.</p> <p>Laevo는 특히 앞으로 숙이거나 물건을 들어 올리는 작업에서 효과를 발휘합니다. 연구 자료에 따르면 허리와 등 근육의 부담을 약 40–50% 감소시키는 효과가 보고되었습니다.</p> <p>CBW가 일상 착용형이라면, Laevo는 중량 작업 중심의 외골격 구조입니다. 반복적이고 강도가 높은 작업 환경을 타겟으로 합니다.</p> </div> </section> <section id="contact" class="panel"> <div class="hero hero--contact product"> <h1 class="headline">Contact</h1> <p>문의는 이메일로 받고 있습니다.</p> <p><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></p> <p>대부분의 문의는 10분 이내에 회신드리며, 늦어도 당일 중으로 답변드립니다.</p> <p>NextWork Lab.은 주식회사 TUA에서 운영하고 있습니다.</p> <p> 회사 홈페이지: <a href="https://tuatua.kr" target="_blank">https://tuatua.kr</a> </p> <p> 서울특별시 서초구 강남대로53길 8, 7-179 </p> </div> </section>
