--- a/content/_index.html
+++ b/content/_index.html
@@ -1,5 +1,5 @@
 <section id="about" class="panel is-default">
-  <div class="hero hero--about">
+  <div class="hero">
     <h1 class="headline">We think about the next generation of work.</h1>
 
     <p class="subhead">
@@ -10,15 +10,9 @@
     <p class="subhead">
       NextWork Lab.은 의료·돌봄·산업 현장에서 실제로 사용할 수 있는 솔루션을 소개합니다.
     </p>
-
-    <hr class="section-rule">
-
-    <h2 class="section-title">What NextWork Lab. does</h2>
-    <p class="section-desc">
-      NextWork Lab.은 제품 카탈로그가 아니라, 현장에서 검증 가능한 솔루션을 선별해 소개하는 브랜드 플랫폼입니다.
-    </p>
   </div>
 </section>
+
 
 <section id="cbw" class="panel">
   <div class="hero hero--product product">
