--- a/content/_index.html
+++ b/content/_index.html
@@ -15,16 +15,79 @@
 
 
 <section id="cbw" class="panel">
-  <div class="hero hero--product product">
+  <div class="hero">
     <h1 class="headline">CBW</h1>
 
-    <p class="section-desc">
-      CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고,
-      올바른 자세를 유지하도록 돕습니다.
+    <p class="subhead">
+      CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다.
+      작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.
     </p>
 
-    <h3>일상 착용을 전제로 설계된 구조</h3>
-    <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
+    <p class="subhead">
+      별도의 장비를 착용하거나 휴대할 필요가 없고, 일반 작업복처럼 자연스럽게 착용할 수 있도록 설계되었습니다.
+    </p>
 
-    <h3>자세를 “잡아주는” 핵심 메커니즘</h3>
-    <p>CBW의 핵심은 자세
+    <p class="subhead">
+      복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다.
+      들어 올림·내림 동작에서는 내부 밴드 구조가 작동해 반복 작업 환경을 보조합니다.
+    </p>
+
+    <p class="subhead">
+      CBW는 하루 일과 전체를 고려한 착용 경험을 기준으로 설계되었습니다.
+    </p>
+  </div>
+</section>
+
+
+<section id="exgel" class="panel">
+  <div class="hero">
+    <h1 class="headline">exgel · Laevo</h1>
+
+    <p class="subhead">
+      Laevo는 exgel이 공급하는 패시브 타입의 웨어러블 서포트 수트입니다.
+      배터리나 모터 없이, 기계적 구조로 작업 부담을 줄이는 방식입니다.
+    </p>
+
+    <p class="subhead">
+      사용자의 움직임에서 발생하는 힘을 저장하고 방출해 허리와 상체에 가해지는 부담을 줄입니다.
+    </p>
+
+    <p class="subhead">
+      특히 앞으로 숙이거나 들어 올리는 동작에서 효과를 발휘하도록 설계되었습니다.
+    </p>
+
+    <p class="subhead">
+      CBW가 일상 착용형이라면, Laevo는 중량 작업 중심의 외골격 구조로
+      반복적이고 강도가 높은 작업 환경을 타겟으로 합니다.
+    </p>
+  </div>
+</section>
+
+
+<section id="contact" class="panel">
+  <div class="hero">
+    <h1 class="headline">Contact</h1>
+
+    <p class="subhead">
+      문의는 이메일로 받고 있습니다. 대부분의 문의는 10분 이내에 회신드리며,
+      늦어도 당일 중으로 답변드립니다.
+    </p>
+
+    <p class="subhead">
+      <a href="mailto:info@tuatua.kr">info@tuatua.kr</a>
+    </p>
+
+    <p class="subhead">
+      NextWork Lab.은 주식회사 TUA에서 운영하고 있습니다.
+    </p>
+
+    <p class="subhead">
+      회사 홈페이지:
+      <a href="https://tuatua.kr" target="_blank">https://tuatua.kr</a>
+    </p>
+
+    <p class="subhead">
+      서울특별시 서초구 강남대로53길 8, 7-179
+    </p>
+  </div>
+</section>
