--- a/content/_index.html
+++ b/content/_index.html
@@ -1,10 +1,10 @@
 <section id="about" class="panel is-default">
-  <div class="hero hero--about">
-    <h1 class="headline">We think about the next generation of work.</h1>
+<div class="hero hero--about">
+    <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
 
     <p class="subhead">
-      고령화와 인력 부족의 시대에 우리는 “다음 세대의 일(Next Work)”을 고민합니다.
-      자동화가 아니라, 사람이 해야 하는 일을 기술로 보완하는 방식에 주목합니다.
+      고령화와 인력 부족의 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
+      단순한 자동화가 아니라, 기술이 인간의 가능성을 확장하는 방식에 주목합니다.
     </p>
 
     <p class="subhead">
