--- a/content/_index.html
+++ b/content/_index.html
@@ -3,19 +3,14 @@
     <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
 
     <p class="subhead">
-      고령화와 인력 부족의 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
-      단순한 자동화가 아니라, 기술이 인간의 가능성을 확장하는 방식에 주목합니다.
+      고령화와 AI 시대에 우리는 더 나은 <strong>“일의 방법”</strong>을 고민합니다.
+      기술이 인간의 가능성을 확장하는 방식에 주목합니다.
     </p>
 
     <p class="subhead">
-      NextWork Lab.은 의료·돌봄·산업 현장에서 실제로 사용할 수 있는 솔루션을 소개합니다.
+      NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.
     </p>
 
-    <hr class="rule">
-
-    <p class="section-desc">
-      제품 카탈로그가 아니라, 현장 사용 맥락을 기준으로 솔루션을 정리하고 전달합니다.
-    </p>
   </div>
 </section>
 
