--- a/content/_index.html
+++ b/content/_index.html
@@ -3,7 +3,7 @@
     <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
 
     <p class="subhead">
-      고령화와 AI 시대에 우리는 더 나은 <strong>“일의 방법”</strong>을 고민합니다.
+      고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
       기술이 인간의 가능성을 확장하는 방식에 주목합니다.
     </p>
 
