--- a/content/_index.html
+++ b/content/_index.html
@@ -15,7 +15,7 @@
 </section>
 
 
-<section id="cbw" class="panel">
+<section id="function" class="panel">
   <div class="hero hero--product product">
     <h1 class="headline">CBW</h1>
 
@@ -39,7 +39,7 @@
 </section>
 
 
-<section id="exgel" class="panel">
+<section id="safework" class="panel">
   <div class="hero hero--product product">
     <h1 class="headline">exgel · Laevo</h1>
 
