--- a/content/_index.html
+++ b/content/_index.html
@@ -20,24 +20,46 @@
     <h1 class="headline">CBW</h1>
 
     <p class="section-desc">
-      CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다.
-      작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.
+      CBW(Conditiong Brace Wear)는 **바지 일체형 어시스트 수트**입니다.
+      일상적인 작업복의 편안함에 신체 기능 보조 기술을 결합하여, 근로자의 근골격계 질환을 예방합니다.
     </p>
 
-    <h3>일상 착용을 전제로 설계된 구조</h3>
-    <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
+    <div class="product-image" style="text-align: center; margin-bottom: 60px;">
+      <img src="/images/cbw.png" alt="CBW 착용 모습" style="width:100%; max-width:800px; border-radius: 12px;">
+    </div>
 
-    <h3>자세를 잡아주는 핵심 메커니즘</h3>
-    <p>복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
+    <h3>01. 일상 착용을 전제로 설계된 구조</h3>
+    <p>
+      CBW는 '입는 로봇'의 거부감을 없앴습니다. 별도의 기계 장치가 겉으로 드러나지 않아 일반 작업복처럼 자연스럽고, 
+      출퇴근은 물론 하루 종일 착용해도 불편함이 없는 가볍고 쾌적한 소재를 사용했습니다.
+    </p>
 
-    <h3>반복 작업 환경을 고려한 보조 방식</h3>
-    <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
+    <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
+    <div class="product-image" style="background: #f8fafc; padding: 40px; border-radius: 16px; margin: 30px 0;">
+      <p style="text-align:center; color: var(--muted); font-size: 14px; margin-bottom: 20px;">[이미지: 복압 상승 및 요추 안정화 다이어그램]</p>
+      <img src="/images/cbw_mechanism_ko.png" alt="복부 서포터 메커니즘" style="width:100%; max-width:500px; display:block; margin: 0 auto;">
+    </div>
+    <p>
+      복부 서포터가 복강 내 압력을 적절히 높여 척추를 안쪽에서부터 단단하게 지지합니다. 
+      이를 통해 무거운 물건을 들거나 장시간 허리를 굽히는 동작에서도 요추의 정렬을 바르게 유지하도록 돕습니다.
+    </p>
 
-    <h3>하루 일과 전체를 기준으로 한 착용 경험</h3>
-    <p>CBW는 하루 일과 전체를 고려한 착용 경험을 기준으로 설계되었습니다.</p>
+    <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
+    <div class="product-image" style="margin: 30px 0;">
+      <img src="/images/cbw_band_ko.png" alt="내부 어시스트 밴드 작동 원리" style="width:100%; max-width:600px; display:block; margin: 0 auto;">
+    </div>
+    <p>
+      바지 내부에 내장된 고탄성 어시스트 밴드는 사용자가 몸을 숙일 때 에너지를 저장하고, 
+      다시 일어설 때 수축하며 하체의 힘을 보조합니다. 반복적인 상하 이동 작업 시 피로도를 획기적으로 낮춰줍니다.
+    </p>
+
+    <h3>04. 하루 일과 전체를 기준으로 한 착용 경험</h3>
+    <p>
+      단순히 힘을 쓰는 순간만이 아니라, 걷고, 앉고, 계단을 오르는 모든 일상 동작을 방해하지 않습니다. 
+      CBW는 근로자의 '하루 전체'가 더 안전하고 편안해지도록 설계되었습니다.
+    </p>
   </div>
 </section>
-
 
 <section id="safework" class="panel">
   <div class="hero hero--product product">
