--- a/content/_index.html
+++ b/content/_index.html
@@ -58,12 +58,11 @@
       단순히 힘을 쓰는 순간만이 아니라, 걷고, 앉고, 계단을 오르는 모든 일상 동작을 방해하지 않습니다. 
       CBW는 근로자의 '하루 전체'가 더 안전하고 편안해지도록 설계되었습니다.
     </p>
-      <div class="cta-group">
-      <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      
-      <a href="YOUR_GOOGLE_DRIVE_LINK_HERE" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
-    </div>
-  </div>
+<div class="cta-group">
+  <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
+  
+  <a href="YOUR_GOOGLE_DRIVE_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+</div>
 </section>
 
 <section id="safework" class="panel">
