--- a/content/_index.html
+++ b/content/_index.html
@@ -71,7 +71,7 @@
 
     <p class="section-desc">
       I-BOW는 열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 **손목시계형 웨어러블 디바이스**입니다. 
-      외부 기온과 피부 온도를 동시에 측정하여 근로자의 안전을 실시간으로 보호합니다. [cite: 9]
+      외부 기온과 피부 온도를 동시에 측정하여 근로자의 안전을 실시간으로 보호합니다. 
     </p>
 
     <div class="product-image" style="text-align: center; margin-bottom: 60px;">
@@ -81,33 +81,33 @@
 
     <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
     <p>
-      I-BOW는 두 개의 센서로 외부 기온과 피부 온도를 측정하며, 독자적인 알고리즘을 통해 심부 체온을 계산합니다. [cite: 9, 26, 27]
-      우리 몸에 위험하다고 알려진 심부 체온 **37.8°C 이상**을 감지할 경우 즉시 경고를 보냅니다. [cite: 10, 42]
+      I-BOW는 두 개의 센서로 외부 기온과 피부 온도를 측정하며, 독자적인 알고리즘을 통해 심부 체온을 계산합니다. 
+      우리 몸에 위험하다고 알려진 심부 체온 **37.8°C 이상**을 감지할 경우 즉시 경고를 보냅니다. 
     </p>
 
     <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
     <p>
-      현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 **소리(알람), 빛(LED), 진동**의 세 가지 패턴으로 위험을 알립니다. [cite: 11, 15, 20]
-      알림을 받으면 즉시 수분을 섭취하고 휴식을 취할 수 있도록 가이드하여 온열 질환을 예방합니다. [cite: 11]
+      현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 **소리(알람), 빛(LED), 진동**의 세 가지 패턴으로 위험을 알립니다.
+      알림을 받으면 즉시 수분을 섭취하고 휴식을 취할 수 있도록 가이드하여 온열 질환을 예방합니다.
     </p>
 
     <h3>03. 현장 최적화 설계 및 편리한 관리</h3>
     <p>
-      전원 ON/OFF 스위치가 탑재되어 관리가 용이하며, 전용 마그네틱 USB 케이블로 간편하게 충전하여 반복 사용할 수 있습니다. [cite: 21, 30, 31]
-      완충 시 하루 8시간 사용 기준 최대 90일까지 연속 가동이 가능해 유지보수 부담이 적습니다. [cite: 32, 43]
+      전원 ON/OFF 스위치가 탑재되어 관리가 용이하며, 전용 마그네틱 USB 케이블로 간편하게 충전하여 반복 사용할 수 있습니다. 
+      완충 시 하루 8시간 사용 기준 최대 90일까지 연속 가동이 가능해 유지보수 부담이 적습니다. 
     </p>
 
     <h3>제품 주요 사양</h3>
     <div style="background: var(--soft); padding: 30px; border-radius: 8px; margin: 20px 0;">
       <ul style="list-style: none; padding: 0; font-size: 15px;">
-        <li style="margin-bottom: 8px;"><strong>크기:</strong> 약 W32mm × H12.5mm [cite: 37]</li>
-        <li style="margin-bottom: 8px;"><strong>무게:</strong> 약 40g (초경량 설계) [cite: 37]</li>
-        <li style="margin-bottom: 8px;"><strong>재질:</strong> 본체(ABS), 벨트(실리콘 스포츠 타입) [cite: 38]</li>
-        <li style="margin-bottom: 8px;"><strong>방수방진:</strong> IP67 등급 [cite: 38]</li>
-        <li><strong>알림 알람:</strong> 약 70db [cite: 39]</li>
+        <li style="margin-bottom: 8px;"><strong>크기:</strong> 약 W32mm × H12.5mm </li>
+        <li style="margin-bottom: 8px;"><strong>무게:</strong> 약 40g (초경량 설계)</li>
+        <li style="margin-bottom: 8px;"><strong>재질:</strong> 본체(ABS), 벨트(실리콘 스포츠 타입) </li>
+        <li style="margin-bottom: 8px;"><strong>방수방진:</strong> IP67 등급 </li>
+        <li><strong>알림 알람:</strong> 약 70db</li>
       </ul>
       <p style="font-size: 13px; color: var(--muted); margin-top: 15px; border-top: 1px solid var(--border); padding-top: 10px;">
-        ※ 이 제품은 의료기기가 아닙니다. [cite: 7] 성능 향상을 위해 외관 및 사양은 예고 없이 변경될 수 있습니다. [cite: 44]
+        ※ 이 제품은 의료기기가 아닙니다. 성능 향상을 위해 외관 및 사양은 예고 없이 변경될 수 있습니다. 
       </p>
     </div>
 
