--- a/content/_index.html
+++ b/content/_index.html
@@ -121,26 +121,29 @@
 
 <section id="contact" class="panel">
   <div class="hero hero--contact product">
-    <h1 class="headline">Contact</h1>
-
-    <p class="section-desc">
-      문의는 이메일로 받고 있습니다. 대부분의 문의는 10분 이내에 회신드리며, 늦어도 당일 중으로 답변드립니다.
+    <h1 class="headline">문의</h1> <p class="section-desc">
+      넥스트워크 랩은 기술을 통해 더 안전한 내일을 만듭니다. <br>
+      솔루션 도입, 파트너십, 제품 데모 요청 등 모든 문의를 환영합니다.
     </p>
 
-    <div class="contact-list">
-      <div class="contact-row">
-        <div class="contact-key">Email</div>
-        <div class="contact-val"><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></div>
+    <div class="contact-grid">
+      <div class="contact-card">
+        <div class="card-label">Email</div>
+        <div class="card-value"><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></div>
+        <p class="card-note">문의 주시면 영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
+        <a href="mailto:info@tuatua.kr?subject=[문의] 제품 도입 관련 문의" class="btn-nextwork btn-inquiry" style="margin-top: 20px; width: 100%;">메일 보내기</a>
       </div>
 
-      <div class="contact-row">
-        <div class="contact-key">Address</div>
-        <div class="contact-val">서울특별시 서초구 강남대로53길 8, 7-179</div>
+      <div class="contact-card">
+        <div class="card-label">Address</div>
+        <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
+        <p class="card-note">강남역 5번 출구 인근에 위치하고 있습니다.</p>
       </div>
 
-      <div class="contact-row">
-        <div class="contact-key">Company</div>
-        <div class="contact-val"><a href="https://tuatua.kr" target="_blank" rel="noopener">https://tuatua.kr</a></div>
+      <div class="contact-card">
+        <div class="card-label">Partnership</div>
+        <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener">https://tuatua.kr</a></div>
+        <p class="card-note">넥스트워크 랩의 모기업 TUA Inc. 공식 홈페이지</p>
       </div>
     </div>
   </div>
