--- a/content/_index.html
+++ b/content/_index.html
@@ -1,14 +1,12 @@
 <section id="about" class="panel is-default">
   <div class="hero hero--about">
     <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
-
     <p class="subhead">
       고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
-      [cite_start]기술이 인간의 가능성을 확장하는 방식에 주목합니다. [cite: 5]
+      기술이 인간의 가능성을 확장하는 방식에 주목합니다.
     </p>
-
     <p class="subhead">
-      [cite_start]NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다. [cite: 5]
+      NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.
     </p>
   </div>
 </section>
@@ -19,14 +17,13 @@
     <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
     <div class="product-grid">
-      <div class="product-card" onclick="location.href='#cbw-detail'">
+      <div class="product-card" onclick="location.hash='#cbw-detail'">
         <div class="card-img"><img src="/images/cbw.png" alt="CBW"></div>
         <div class="card-info">
           <h4>CBW</h4>
           <p>바지 일체형 어시스트 수트</p>
         </div>
       </div>
-
       <div class="product-card opacity-muted">
         <div class="card-img" style="background: #f1f5f9; height: 200px; display:flex; align-items:center; justify-content:center; color: #cbd5e1; font-weight: 700;">Coming Soon</div>
         <div class="card-info">
@@ -37,21 +34,27 @@
     </div>
 
     <div id="cbw-detail" class="detail-content">
-      <h1 class="headline" style="font-size: 42px;">CBW</h1>
-      <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. [cite_start]작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다. [cite: 5]</p>
+      <h1 class="headline" style="font-size: 42px; margin-top: 40px;">CBW</h1>
+      
+      <div class="product-image" style="text-align: center; margin-bottom: 60px;">
+        <img src="/images/cbw.png" alt="CBW 착용 모습" style="width:100%; max-width:800px; border-radius: 12px;">
+      </div>
 
       <h3>01. 일상 착용을 전제로 설계된 구조</h3>
-      <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. [cite_start]일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다. [cite: 5]</p>
+      <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
       <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
-      <p>복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. [cite_start]장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다. [cite: 5]</p>
+      <p>복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
 
       <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
-      <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. [cite_start]반복적이고 강도가 있는 동작을 고려한 설계입니다. [cite: 5]</p>
+      <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
+
+      <h3>04. 하루 일과 전체를 기준으로 한 착용 경험</h3>
+      <p>CBW는 하루 일과 전체를 고려한 착용 경험을 기준으로 설계되었습니다.</p>
 
       <div class="cta-group">
-        <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
-        <a href="YOUR_CBW_PDF_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+        <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
+        <a href="YOUR_CBW_DRIVE_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
       </div>
     </div>
   </div>
@@ -60,17 +63,16 @@
 <section id="safework" class="panel">
   <div class="hero hero--product product">
     <h1 class="headline">안전한 작업</h1>
-    <p class="section-desc">고온 환경이나 위험한 작업 현장에서 근로자의 생명과 건강을 지키는 스마트 안전 솔루션입니다.</p>
+    <p class="section-desc">현장의 위험 요소를 지능적으로 감지하여 근로자의 안전을 보호합니다.</p>
 
     <div class="product-grid">
-      <div class="product-card" onclick="location.href='#ibow-detail'">
+      <div class="product-card" onclick="location.hash='#ibow-detail'">
         <div class="card-img"><img src="/images/nextworklab_symbol.png" alt="I-BOW"></div>
         <div class="card-info">
           <h4>I-BOW</h4>
           <p>열사병 예방 웨어러블 밴드</p>
         </div>
       </div>
-
       <div class="product-card opacity-muted">
         <div class="card-img" style="background: #f1f5f9; height: 200px; display:flex; align-items:center; justify-content:center; color: #cbd5e1; font-weight: 700;">Coming Soon</div>
         <div class="card-info">
@@ -81,29 +83,33 @@
     </div>
 
     <div id="ibow-detail" class="detail-content">
-      <h1 class="headline" style="font-size: 42px;">I-BOW</h1>
-      [cite_start]<p class="subhead">열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다. [cite: 6]</p>
+      <h1 class="headline" style="font-size: 42px; margin-top: 40px;">I-BOW</h1>
+      
+      <div class="product-image" style="text-align: center; margin-bottom: 40px;">
+        <img src="/images/nextworklab_symbol.png" alt="I-BOW 제품 이미지" style="width:100%; max-width:500px; border-radius: 12px;">
+      </div>
 
       <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
-      [cite_start]<p>외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다. [cite: 6]</p>
+      <p>외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다.</p>
 
       <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
-      [cite_start]<p>현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 소리, 빛, 진동의 세 가지 패턴으로 위험을 알리고 수분 섭취와 휴식을 권고합니다. [cite: 6]</p>
+      <p>현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 소리, 빛, 진동의 세 가지 패턴으로 위험을 알리고 수분 섭취와 휴식을 권고합니다.</p>
 
-      <h3>03. 제품 주요 사양</h3>
-      <div style="background: var(--soft); padding: 30px; border-radius: 8px; margin-bottom: 24px;">
+      <h3>03. 현장 최적화 설계 및 성능</h3>
+      <p>IP67 등급의 방수방진 성능을 갖추고 있으며, 완충 시 하루 8시간 사용 기준 최대 90일까지 연속 사용이 가능해 관리 효율이 높습니다.</p>
+
+      <div style="background: var(--soft); padding: 30px; border-radius: 8px; margin: 30px 0;">
         <ul style="list-style: none; padding: 0; font-size: 15px;">
-          [cite_start]<li style="margin-bottom: 8px;"><strong>크기:</strong> 약 W32mm × H12.5mm [cite: 6]</li>
-          [cite_start]<li style="margin-bottom: 8px;"><strong>무게:</strong> 약 40g (배터리 포함) [cite: 6]</li>
-          [cite_start]<li style="margin-bottom: 8px;"><strong>방수방진:</strong> IP67 등급 [cite: 6]</li>
-          [cite_start]<li><strong>가동 시간:</strong> 완충 시 최대 90일 (1일 8시간 사용 기준) [cite: 6]</li>
+          <li style="margin-bottom: 8px;"><strong>크기 및 무게:</strong> W 32mm x H 12.5mm / 약 40g</li>
+          <li style="margin-bottom: 8px;"><strong>배터리:</strong> 완충 시 최대 90일 가동 (마그네틱 충전)</li>
+          <li><strong>알림 방식:</strong> 소리(70db), LED 점멸, 진동 알림</li>
         </ul>
-        [cite_start]<p style="font-size: 12px; color: var(--muted); margin-top: 15px;">※ 본 제품은 의료기기가 아닙니다. [cite: 6]</p>
+        <p style="font-size: 12px; color: var(--muted); margin-top: 15px;">※ 본 제품은 의료기기가 아닙니다.</p>
       </div>
 
       <div class="cta-group">
-        <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
-        <a href="YOUR_IBOW_PDF_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+        <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
+        <a href="YOUR_IBOW_DRIVE_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
       </div>
     </div>
   </div>
@@ -121,17 +127,15 @@
         <p class="card-note">문의 주시면 영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
         <a href="mailto:info@tuatua.kr?subject=[문의] 제품 도입 관련 문의" class="btn-nextwork btn-inquiry" style="margin-top: 20px; width: 100%;">메일 보내기</a>
       </div>
-
       <div class="contact-card">
         <div class="card-label">Address</div>
-        [cite_start]<div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179 [cite: 5]</div>
+        <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
         <p class="card-note">강남역 5번 출구 인근에 위치하고 있습니다.</p>
       </div>
-
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener">https://tuatua.kr</a></div>
-        [cite_start]<p class="card-note">넥스트워크 랩의 모기업 (주)투아투아 공식 홈페이지 [cite: 5]</p>
+        <p class="card-note">넥스트워크 랩의 모기업 (주)투아투아 공식 홈페이지</p>
       </div>
     </div>
   </div>
