--- a/content/_index.html
+++ b/content/_index.html
@@ -32,7 +32,8 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="https://drive.google.com/file/d/1fbDG3FcTOYnwtn-OiFPw5fERXAof78F4/view?usp=sharing" target="_blank" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="https://drive.google.com/file/d/1fbDG3FcTOYnwtn-OiFPw5fERXAof78F4/preview" 
+   target="_blank" rel="noopener">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
