--- a/content/_index.html
+++ b/content/_index.html
@@ -8,20 +8,20 @@
 
 <section id="function" class="panel">
   <div class="hero hero--product product">
-    <h1 class="headline">신체기능: CBW</h1>
-    <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
+    <h1 class="headline">CBW</h1>
+    <p class="section-desc">근로자의 신체 기능을 유지하면서, 근골격계 부담을 최소화하는 솔루션입니다.</p>
 
     <div class="product-image">
       <img src="/images/CBW_WEB_A4_MS_1.png" alt="CBW 메인 이미지">
     </div>
 
-    <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
+    <p class="subhead">CBW는 바지 일체형으로 설계된 입는 근골격계 보조 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
 
     <h3>01. 일상 착용을 전제로 설계된 구조</h3>
     <p class="detail-text">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
     <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
-    <p class="detail-text">복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
+    <p class="detail-text">복부 지지대를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
 
     <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
     <p class="detail-text">물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
@@ -36,14 +36,14 @@
 
 <section id="safework" class="panel">
   <div class="hero hero--product product">
-    <h1 class="headline">안전한 작업: I-BOW</h1>
+    <h1 class="headline">I-BOW</h1>
     <p class="section-desc">고온 환경이나 위험한 작업 현장에서 근로자의 생명과 건강을 지키는 스마트 안전 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/nextworklab_symbol.png" alt="I-BOW 메인 이미지">
+      <img src="/images/I-BOW_WEB_KR_1.png" alt="I-BOW 메인 이미지">
     </div>
 
-    <p class="subhead">I-BOW는 열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다.</p>
+    <p class="subhead">I-BOW는 열사병, 온열질환 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다.</p>
 
     <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
     <p class="detail-text">외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다.</p>
@@ -64,7 +64,8 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="YOUR_IBOW_PDF_LINK" target="_blank" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+         <a href="https://drive.google.com/file/d/1zU2zPEJpfpswUU0KLQw8NqodV9ZarnNZ/preview" 
+   target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -87,7 +88,7 @@
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value"><a href="https://tuatua.kr" target="_blank" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
-        <p style="font-size:14px; color:var(--muted); margin:0;">모기업 (주)투아투아 공식 홈페이지</p>
+        <p style="font-size:14px; color:var(--muted); margin:0;">NextWork Lab.은 주식회사 TUA의 판매 브랜드입니다.</p>
       </div>
     </div>
   </div>
