--- a/content/_index.html
+++ b/content/_index.html
@@ -76,19 +76,24 @@
     <p class="section-desc">솔루션 도입 및 파트너십 문의를 환영합니다. 확인 후 신속히 연락드리겠습니다.</p>
     <div class="contact-grid">
       <div class="contact-card">
-        <div class="card-label">Email</div>
+        <div class="card-label">전자 메일</div>
         <div class="card-value"><a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a></div>
         <p style="font-size:14px; color:var(--muted); margin:0;">영업일 기준 1시간 이내에 답변 드립니다.</p>
       </div>
       <div class="contact-card">
-        <div class="card-label">Address</div>
-        <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
-        <p style="font-size:14px; color:var(--muted); margin:0;">강남역 5번 출구 인근</p>
+        <div class="card-label">전화 번호</div>
+        <div class="card-value">070-4571-9930</div>
+        <p style="font-size:14px; color:var(--muted); margin:0;">구매 문의 전화입니다.</p>
       </div>
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value"><a href="https://tuatua.kr" target="_blank" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
         <p style="font-size:14px; color:var(--muted); margin:0;">NextWork Lab.은 주식회사 TUA의 판매 브랜드입니다.</p>
+      </div>
+        <div class="contact-card">
+        <div class="card-label">Address</div>
+        <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
+        <p style="font-size:14px; color:var(--muted); margin:0;">강남역 5번 출구 인근</p>
       </div>
     </div>
   </div>
