--- a/content/_index.html
+++ b/content/_index.html
@@ -25,6 +25,23 @@
 
     <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
     <p class="detail-text">물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
+<h3>04. 요양보호사의 CBW 사용 (도입 제안)</h3>
+<p class="detail-text">
+  요양보호사의 반복적인 숙임, 이동 보조, 자세 유지 상황에서
+  허리와 하체에 집중되는 부담을 줄이기 위한 착용형 솔루션으로 CBW를 제안합니다.
+</p>
+
+<p class="detail-text">
+  실제 현장 적용 시나리오와 도입 효과에 대한 자세한 내용은
+  아래 제안서에서 확인하실 수 있습니다.
+</p>
+
+<p>
+  <a href="https://drive.google.com/file/d/1LB93s6js2GL30HFHAggCO6WrQOfXOIsa/preview"
+     target="_blank" rel="noopener noreferrer">
+    04 요양보호사의 CBW 사용 제안서 (PDF)
+  </a>
+</p>
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
