--- a/content/_index.html
+++ b/content/_index.html
@@ -39,7 +39,7 @@
 <p>
   <a href="https://drive.google.com/file/d/1LB93s6js2GL30HFHAggCO6WrQOfXOIsa/preview"
      target="_blank" rel="noopener noreferrer">
-    04 요양보호사의 CBW 사용 제안서 (PDF)
+    요양보호사의 CBW 사용 제안서 (PDF)
   </a>
 </p>
 
