--- a/content/_index.html
+++ b/content/_index.html
@@ -107,7 +107,7 @@
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value">
-          <a href="https://tuatua.kr" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">TUA Inc.</a>
+          <a href="https://tuatua.kr" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">TUA Co., Ltd.</a>
         </div>
         <p style="font-size:14px; color:var(--muted); margin:0;">NextWork Lab.은 주식회사 TUA의 판매 브랜드입니다.</p>
       </div>
